tab fixes to realign, and change prev-next tab buttons

--- a/less/bookmarksToolbar.less
+++ b/less/bookmarksToolbar.less
@@ -6,7 +6,7 @@
 
 .bookmarksToolbar {
   background: @toolbarBackground;
-  border-bottom: 1px solid #BBBBBB;
+  border-bottom: 1px solid #aaaaaa;
   border-top: 1px solid #FFFFFF;
   box-sizing: border-box;
   display: flex;
