--- a/less/tabs.less
+++ b/less/tabs.less
@@ -11,7 +11,7 @@
   flex: 1;
   overflow: auto;
   padding: 0 4px 0 6px;
-  height: 22px;
+  height: 23px;
   position: relative;
   white-space: nowrap;
   z-index: 310;
@@ -230,7 +230,7 @@
 .tabsToolbar {
   background: @tabsBackground;
   display: flex;
-  height: 22px;
+  height: 23px;
   -webkit-user-select: none;
 }
 
@@ -299,15 +299,15 @@
 .prevTab,
 .nextTab {
     display: none;
-    color: @buttonColor;
+    color: #a0a0a0;
     font-size: 21px !important;
     height: 20px;
     line-height: 17px !important;
     text-align: center;
     vertical-align: top;
-    margin-top: 2px;
-    margin-left: -3px;
-    margin-right: -3px;
+    margin-top: 1px;
+    margin-left: -5px;
+    margin-right: -5px;
     width: 34px;
     
   &:not([disabled]) {
@@ -315,7 +315,8 @@
     background: @tabsBackground;
       
     &:hover {
-      background: lighten(#eeeeee, 10%);
+  //    background: lighten(#eeeeee, 10%);
+            color: white;
     }
   }
 }
